[package]
name = "chat_server_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["ws"] }
rand = "0.8.5"
tokio ={ version = "1.35.1", features = ["full"] }
uuid = "1.6.1"
